2018-03-24  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42518, CVE-2018-1071: Src/exec.c, Src/utils.c:
	check bounds when copying path in hashcmd()

2018-03-24  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 42501: Src/Zle/complete.c, Src/Zle/computil.c,
	Src/Zle/zle_thingy.c: avoid out of bound pointer (as 42487).

	* unposted: Src/Modules/db_gdbm.c: add 'static' to a file-local
	variable.

2018-03-23  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42491 based on 42000 (Andrei Shevchuk):
	Completion/Unix/Command/_mosh, Completion/Unix/Command/_git,
	Completion/Unix/Command/_ssh, Completion/Unix/Type/_ssh_hosts:
	factor ssh host completion for use for mosh and git

	* 42497 (tweaked c.f. 42498): Completion/Debian/Command/_apt:
	make completion after apt install work on local .deb files

2018-03-22  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 42191: Completion/Darwin/Command/_otool: new completion

2018-03-21  Peter Stephenson  <p.stephenson@samsung.com>

	* 42487: Src/Zle/compctl.c: remove gcc 7.3.0 warnings and
	potentially incorrect pointer usage.

2018-03-18  Barton E. Schaefer  <schaefer@brasslantern.com>

	* Stephane: 42469: Src/exec.c, Src/Modules/mapfile.c: fix 42465

2018-03-15  Peter Stephenson  <p.stephenson@samsung.com>

	* Stephane: 42465: Src/exec.c, Src/Modules/mapfile.c: pass error
	status from readoutput, causing more consistent reporting
	from $(...) constructs.

2018-03-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 42453: Src/jobs.c: fix race looking up status of just
	exited background job.

2018-03-07  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* github #22: Ferenc-: Completion/Unix/Command/_gcc:
	Add newer C++ standard options to gcc completion

	* github #23: Matthijs Tijink: Completion/X/Command/_kdeconnect:
	new kdeconnect-cli completion

2018-03-05  Peter Stephenson  <p.stephenson@samsung.com>

	* Martijn: 42365: Src/parse.c: use .zwc file if timestamp
	identical to source file.
